задача выполнена, все тесты проходятся, с БД связь есть, таблицы создаются